# mizizi-kenya-ai

./: .env.example  .env.neo4j.aura.example  .env.neo4j.local.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.masumi.yml  docker-compose.neo4j.yml  package.json  render.yaml  tsconfig.json
.agents/: CONTEXT.md  agents.md
.agents/skills/: README.md
.claude/rules/: design-system.md  tanstack-routes.md
.cursor/rules/: design-system.mdc  mizizi-project.mdc  tanstack-routes.mdc
.github/: copilot-instructions.md
.github/instructions/: design-system.instructions.md  tanstack-routes.instructions.md
.github/skills/: README.md
.lovable/: demo-env.md  plan.md  skills.md
contracts/credit_rails/: Cargo.toml  README.md
contracts/credit_rails/scripts/: deploy.ts  dev-access.ts  invoke-drawdown.ts  invoke-issue.ts  shared.ts
contracts/credit_rails/src/: lib.rs
deploy/masumi/: .env.example  DEPLOY.md  ENV.md  LOCAL.md  README.md  RENDER.md  blueprint.yaml  docker-compose.yml  render.yaml
docs/: LOVABLE_MASTER_PROMPT.md  Mizizi_prd.md  README.md  api.md  graph-model.md  infra.md  masumi-deploy.md  masumi.md  neo4j-implementation.md  neo4j.md  phase-status.md  stellar-hacks-zk-submission-plan.md  stellar-zk-architecture.md
scripts/masumi/: apply-env.ts  wait-agents.ts
scripts/neo4j/: 001_constraints.cypher  002_gds_optional.cypher  apply-env.ts  lib.ts  load-dotenv.ts  setup.ts  verify.ts  wait-docker.ts
scripts/seed/: index.ts
services/mizizi-agents/: run.py
src/: routeTree.gen.ts  server.ts  styles.css
zk/: README.md
(+297 files in other folders)
